@@ -192,6 +192,16 @@ GMapsTorqueLayer.prototype = _.extend({},
     }
   },
 
+  getActivePointsBBox: function(step) {
+    var positions = [];
+    var tileMax = this.options.resolution * (256/this.options.resolution - 1);
+    for(var t in this._tiles) {
+      var tile = this._tiles[t];
+      positions = positions.concat(this.renderer.getActivePointsBBox(tile, step));
+    }
+    return positions;
+  },
+
   /**
    * set key to be shown. If it's a single value
    * it renders directly, if it's an array it renders
