@@ -272,6 +272,20 @@ L.TorqueLayer = L.CanvasLayer.extend({
 
     this.redraw();
     return this;
+  },
+
+  /**
+   * get active points for a step in active zoom
+   * returns a list of bounding boxes [[] , [], []]
+   * empty list if there is no active pixels
+   */
+  getActivePointsBBox: function(step) {
+    var positions = [];
+    for(var t in this._tiles) {
+      var tile = this._tiles[t];
+      positions = positions.concat(this.renderer.getActivePointsBBox(tile, step));
+    }
+    return positions;
   }
 
 });
