@@ -156,6 +156,36 @@
 
     setBlendMode: function(b) {
       this.options.blendmode = b;
+    },
+
+    /**
+     * get active points for a step in active zoom
+     * returns a list of bounding boxes [[sw, ne] , [], []] where ne is a {lat: .., lon: ...} obj
+     * empty list if there is no active pixels
+     */
+    getActivePointsBBox: function(tile, step) {
+      var positions = [];
+      var mercator = new torque.Mercator();
+
+      var tileMax = this.options.resolution * (256/this.options.resolution - 1);
+      //this.renderer.renderTile(tile, this.key, pos.x, pos.y);
+      var activePixels = tile.timeCount[step];
+      var pixelIndex = tile.timeIndex[step];
+      for(var p = 0; p < activePixels; ++p) {
+        var posIdx = tile.renderDataPos[pixelIndex + p];
+        var c = tile.renderData[pixelIndex + p];
+        if (c) {
+         var x = tile.x[posIdx];
+         var y = tileMax - tile.y[posIdx]; // flip mercator
+         positions.push(mercator.tilePixelBBox(
+           tile.coord.x,
+           tile.coord.y,
+           tile.coord.z,
+           x, y
+         ));
+        }
+      }
+      return positions;
     }
 
   };
